fix(renderer): Fix overflow text width result items

--- a/src/renderer/views/Results/RadioButton.module.css
+++ b/src/renderer/views/Results/RadioButton.module.css
@@ -32,7 +32,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0px;
   gap: 12px;
 }
 
@@ -45,10 +44,14 @@
 }
 
 .titleAndArtists>h4 {
+  max-width: 300px;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
   color: #B0B9CC;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .titleAndArtists>span {
@@ -110,5 +113,8 @@
   height: 50px;
   background: #1A1C20;
   border-radius: 4px;
-  /* border: 2px solid #292d33; */
+}
+
+.thumbnail {
+  object-fit: cover;
 }
